[BE] create API update, delete progos
