# swagger/v1/swagger.yaml
@@ -402,6 +402,177 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/not_found"
+    patch:
+      summary: Update an existing progose
+      tags:
+      - Progoses
+      parameters:
+      - name: id
+        required: true
+        in: path
+        example: '1'
+        description: Progose ID
+      security:
+      - bearer_auth: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  example:
+                    type: object
+                    "$ref": "#/components/schemas/detail_progose"
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/bad_request"
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/unauthorized"
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/not_found"
+        '422':
+          description: Unprocessable Entity
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/unprocessable_entity"
+        '500':
+          description: Server Error
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/server_error"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                date_test:
+                  type: string
+                  format: date
+                  example: '2024-05-30'
+                  description: Date of the test in YYYY-MM-DD
+                range:
+                  type: integer
+                  example: 1
+                  description: Range score (integer between 1(A1), 2(A2), 3(B1)...
+                    and 5(C2)
+                range_evaluation:
+                  type: string
+                  example: Good
+                  description: Evaluation of range score
+                accuracy:
+                  type: integer
+                  example: 2
+                  description: Accuracy score (integer between 1(A1), 2(A2), 3(B1)...
+                    and 5(C2)
+                accuracy_evaluation:
+                  type: string
+                  example: Good
+                  description: Evaluation of accuracy score
+                fluency:
+                  type: integer
+                  example: 3
+                  description: Fluency score (integer between 1(A1), 2(A2), 3(B1)...
+                    and 5(C2)
+                fluency_evaluation:
+                  type: string
+                  example: Needs improvement
+                  description: Evaluation of fluency score
+                interaction:
+                  type: integer
+                  example: 4
+                  description: Interaction score (integer between 1(A1), 2(A2), 3(B1)...
+                    and 5(C2)
+                interaction_evaluation:
+                  type: string
+                  example: Needs improvement
+                  description: Evaluation of interaction score
+                coherence:
+                  type: integer
+                  example: 5
+                  description: Coherence score (integer between 1(A1), 2(A2), 3(B1)
+                    ... and 5(C2)
+                coherence_evaluation:
+                  type: string
+                  example: Average
+                  description: Evaluation of coherence score
+                phonology:
+                  type: integer
+                  example: 6
+                  description: Phonology score (integer between 1(A1), 2(A2), 3(B1)...
+                    and 5(C2)
+                phonology_evaluation:
+                  type: string
+                  example: Very good
+                  description: Evaluation of phonology score
+                overall:
+                  type: integer
+                  example: 1
+                  description: Overall score (integer between 1(A1), 2(A2), 3(B1)...
+                    and 5(C2)
+                overall_evaluation:
+                  type: string
+                  example: Above average
+                  description: Overall evaluation summary
+              required:
+              - date_test
+              - range
+              - range_evaluation
+              - accuracy
+              - accuracy_evaluation
+              - fluency
+              - fluency_evaluation
+              - interaction
+              - interaction_evaluation
+              - coherence
+              - coherence_evaluation
+              - phonology
+              - phonology_evaluation
+              - overall
+              - overall_evaluation
+        required: true
+    delete:
+      summary: Delete a progose
+      tags:
+      - Progoses
+      parameters:
+      - name: id
+        required: true
+        in: path
+        example: '1'
+        description: Progose ID
+      security:
+      - bearer_auth: []
+      responses:
+        '204':
+          description: No Content
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/not_found"
+        '500':
+          description: Server Error
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/server_error"
   "/test":
     get:
       summary: check api
